--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 </head>
 
 <body>
-
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#help">help</a></li>
+      </ul>
+    </nav>
+  </header>
 	<script src="lib/jquery.js"></script>
   <!--<script src="lib/json2.js"></script>-->
   <script src="lib/underscore.js"></script>
