--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       </ul>
     </nav>
   </header>
+  <div id="main">
+    <ul id="contacts"></ul></div>
 	<script src="lib/jquery.js"></script>
   <!--<script src="lib/json2.js"></script>-->
   <script src="lib/underscore.js"></script>
